Now you can choose first two numbers of sequence

--- a/fib_core/fibo_calc/templates/index.html
+++ b/fib_core/fibo_calc/templates/index.html
@@ -12,6 +12,8 @@
         <div class="container">
             <form action="" method="GET">
                 <input type="search" placeholder="Type the range for fibonacci" name="number">
+                <input type="search" placeholder="Type first number od sequence" name="first_number">
+                <input type="search" placeholder="Type second number od sequence" name="number">
                 <button>Go</button>
             </form>
             <div>
