Working and stable version of app - changes in views.fib_nums

--- a/fib_core/fibo_calc/templates/index.html
+++ b/fib_core/fibo_calc/templates/index.html
@@ -13,7 +13,7 @@
             <form action="" method="GET">
                 <input type="search" placeholder="Type the range for fibonacci" name="number">
                 <input type="search" placeholder="Type first number od sequence" name="first_number">
-                <input type="search" placeholder="Type second number od sequence" name="number">
+                <input type="search" placeholder="Type second number od sequence" name="second_number">
                 <button>Go</button>
             </form>
             <div>
